fixed form alignment

--- a/drools-spring/frontend/frontend/src/components/style.css
+++ b/drools-spring/frontend/frontend/src/components/style.css
@@ -3,18 +3,18 @@
     flex-direction: column;
     /* gap: 10px; */
     align-items: center;
-    padding-top: 80px;
+    /* padding-top: 80px; */
 }
 
 div.form-element {
-    margin-top: 30px;
+    margin-top: 20px;
     width: 50%;
     align-items: center;
 }
 
 .antrpological-form {
     display: grid;
-    padding-top: 80px;
+    /* padding-top: 80px; */
     grid-template-columns: 1fr 1fr;
     padding-left: 10px;
     padding-right: 10px;
@@ -22,7 +22,7 @@ div.form-element {
 }
 
 div.antropological-form-element {
-    margin-top: 30px;
+    margin-top: 20px;
     align-items: center;
     width: 98%;
     /* padding-left: 5px; */
